# roadrunner

./: .gitignore  CMakeLists.txt
libplugins/: CMakeLists.txt
libplugins/apps/plugin_info/: auto_link.cpp  plugin_info.cbproj
libplugins/examples/: CMakeLists.txt  README.txt
libplugins/examples/cpp_plugin_demo/: cpp_plugin_demo.cpp
libplugins/examples/property_meta_data/: property_meta_data.cbproj
libplugins/source/: CMakeLists.txt
libplugins/wrappers/C/: CMakeLists.txt  auto_link.cpp  rrplugins_c_api.def
libplugins/wrappers/C/examples/: CMakeLists.txt
libplugins/wrappers/Python/: CMakeLists.txt  Doxyfile  README.txt  install_plugins_win.py  rrPlugins.py
libplugins/wrappers/Python/Examples/: rrCreateNoisyData.py  rrCreateNoisyDataShort.py  rrLevenbergMarquardtShortVersion.py  rrNoisePlugin.py  rrPluginPropertyLists.py  rrPluginTester.py
plugins/: CMakeLists.txt
plugins/add_noise/: CMakeLists.txt  add_noise.cpp  add_noise.h  add_noise_worker.cpp  auto_link.cpp
plugins/apps/: CMakeLists.txt  appsGroup.groupproj
plugins/apps/plugin_info/: CMakeLists.txt  main.cpp  plugin_info.cbproj
plugins/auto_2000/: CMakeLists.txt  autoProject-static.groupproj  autoProject.groupproj  rrp_auto2000-static.cbproj
plugins/auto_2000/examples/: CMakeLists.txt  examples.groupproj
plugins/auto_2000/examples/bistable/: App.groupproj  CMakeLists.txt  StaticApp.groupproj  auto_link.cpp  bistable-static.cbproj  bistable.cbproj  main.cpp
plugins/auto_2000/examples/bistable_c_api/: CMakeLists.txt  bistable-static.cbproj  main.cpp  (+1 more)
plugins/auto_2000/libAuto/: CMakeLists.txt  autlib1.cpp  auto_exporter.h  libAuto-static.cbproj  main.cpp  theMain.cpp  vsAuto.cpp  vsAuto.h
plugins/auto_2000/parser/: CMakeLists.txt  auto_link.cpp  rrAutoOutputParser.h  rrp_AutoOutputParser.cbproj  rrp_auto2000-static.cbproj
plugins/auto_2000/rrAutoInterface/: CMakeLists.txt  auto_link.cpp  rrAutoData.cpp  rrAutoData.h  rrAutoInputConstants.cpp  rrAutoInputConstants.h  rrAutoInterface-static.cbproj  rrAutoInterface.cbproj  rrRRAuto.cpp  rrRRAuto.h  rrRRAutoSetupControl.h
plugins/auto_2000/source/: CMakeLists.txt  auto_link.cpp  rrAutoPlugin.cpp  rrAutoPlugin.h  rrAutoPluginExporter.h  rrAutoWorker.cpp  rrAutoWorker.h  rrp_auto2000.cbproj  rrp_auto2000.def
plugins/examples/c_plugin_demo/: CMakeLists.txt  autolink.cpp  c_plugin_demo.c  c_plugin_demo.h  main.cpp  rrp_c_plugin_demo.def
plugins/examples/c_plugin_demo_1/: autolink.cpp  rrp_c_plugin_demo.cbproj
plugins/examples/cpp_plugin_demo_1/: CMakeLists.txt
plugins/examples/property_meta_data/: CMakeLists.txt  auto_link.cpp
plugins/lmfit/: CMakeLists.txt  LMWorker.cpp  LMWorker.h  auto_link.cpp  lm.cpp  lm.h  lmUtils.cpp  lmUtils.h  lmfit_doc.cpp
plugins/lmfit/docs/: plugin_lmfit.tex
plugins/lmfit/lib/: lmmin.h
plugins/source/: CMakeLists.txt  Doxyfile_cpp_api.doxy  rrCPlugin.cpp  rrCPlugin.h  rrCapabilities.cpp  rrCapabilities.h  rrCapability.cpp  rrCapability.h  rrParameter.h  rrParameters.cpp  rrPlugin.cpp  rrPlugin.h  rrPluginManager.cpp  rrPluginManager.h  rrPluginParameter.cpp  rrPluginParameter.h  rrPluginUtils.cpp  rrPluginUtils.h  rrPluginsAPISettings.h  rrProperties.cpp  rrProperties.h  rrProperty.h  rrPropertyBase.cpp  rrPropertyBase.h  rrpExporter.h
plugins/wrappers/: CMakeLists.txt
plugins/wrappers/C/: CMakeLists.txt  Doxyfile_c_api.doxy  auto_link.cpp  rrp_api.cpp  rrp_api.def  rrp_api.h  rrp_autolink.cpp  rrp_cpp_support.cpp  rrp_cpp_support.h  rrp_parameter_api.cpp  rrp_parameter_api.h  rrp_properties_api.cpp  rrp_types.h  rrplugins_c_api.cpp  rrplugins_c_api.h  rrplugins_cpp_support.h  rrplugins_exporter.h  rrplugins_properties_api.h  rrplugins_settings.h  rrplugins_types.h  rrplugins_utilities.cpp  rrplugins_utilities.h
plugins/wrappers/Python/: CMakeLists.txt  rrPlugins.py  rrPlugins.py.bak  rrPlugins_CAPI.py
(+40 files in other folders)
